<resources>
    <string name="app_name">The Cheapest Petrol Station</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">name last_name</string>
    <string name="nav_header_subtitle">email@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_bar_station_details">Station Details</string>

    <string name="menu_first_option">Petrol Stations</string>
    <string name="menu_second_option">Add Station</string>
    <string name="menu_third_option">Map</string>
    <string name="menu_fourth_option">Settings</string>

    <string name="popup_menu_sort_by_distance_text">Sort by distance</string>
    <string name="popup_menu_sort_by_pb95_price_text">Sort by Pb95 price</string>
    <string name="popup_menu_sort_by_pb98_price_text">Sort by Pb98 price</string>
    <string name="popup_menu_sort_by_on_price_text">Sort by ON price</string>
    <string name="popup_menu_sort_by_lpg_price_text">Sort by LPG price</string>

    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="avatar_url">https://graph.facebook.com/%1$s/picture?width=200&amp;height=200</string>
    <string name="facebook_app_id">2111859849134895</string>
    <string name="facebook_login_protocol_scheme">fb2111859849134895</string>

    <string name="edit_text_login_label">login</string>
    <string name="edit_text_password_label">password</string>
    <string name="edit_text_first_name_label">first name</string>
    <string name="edit_text_last_name_label">last name</string>
    <string name="edit_text_email_label">e-mail</string>

    <string name="add_station_name_hint">station name</string>
    <string name="add_station_city_hint">city</string>
    <string name="add_station_street_hint">street</string>
    <string name="add_station_apartment_number_hint">AN</string>
    <string name="add_station_postal_code_hint">postal code</string>
    <string name="add_station_description_hint">description</string>
    <string name="add_station_has_food">Has Food?</string>
    <string name="add_station_consortium_name_hint">consortiumResponse</string>
    <string name="add_station_button">add petrol station</string>
    <string name="add_station_consortium_name_spinner_prompt">Select Consortium</string>

    <string name="settings_station_distance">Petrol st. distance:</string>
    <string name="settings_saved_station_distance">saved_station_distance</string>
    <string name="settings_change_password_button_text">Change password</string>
    <string name="settings_delete_user_button_text">Delete account</string>

    <string name="change_pw_old_password_text">Enter old password:</string>
    <string name="change_pw_old_password_hint">Old password</string>
    <string name="change_pw_new_password_text">Enter new password:</string>
    <string name="change_pw_new_password_hint">New password</string>
    <string name="change_pw_repeat_new_password_text">Repeat new password:</string>

    <string name="delete_user_dialog_enter_pw_text">Enter your password:</string>
    <string name="delete_user_dialog_enter_pw_hint">password</string>

    <string name="key_access_token_details">access_token_details</string>
    <string name="key_token">access_token</string>
    <string name="key_token_type">token_type</string>
    <string name="key_refresh_token">refresh_token</string>
    <string name="key_distance">distance</string>
    <string name="key_station_id">station_id</string>
    <string name="key_recycle_view_state">recycle_view_state</string>
    <string name="key_petrol_station_fragment_tag">petrol_station_fragment_tag</string>
    <string name="key_recycleview_station_index">recycleview_station_index</string>

    <string name="recycleview_pb95_text_value">Pb95:\u0020</string>
    <string name="recycleview_pb98_text_value">Pb98:\u0020</string>
    <string name="recycleview_on_text_value">ON:\u0020</string>
    <string name="recycleview_lpg_text_value">LPG:\u0020</string>
    <string name="recycleview_pb95_text_value_price_par">%1$s&#032;PLN</string>
    <string name="recycleview_pb98_text_value_price_par">%1$s&#032;PLN</string>
    <string name="recycleview_on_text_value_price_par">%1$s&#032;PLN</string>
    <string name="recycleview_lpg_text_value_price_par">%1$s&#032;PLN</string>
    <string name="recycleview_distance">Distance:&#032;%1$s&#032;%2$s</string>

    <string name="station_details_last_update">Updated:&#032;%1$s&#032;%2$s&#032;ago</string>
    <string name="station_details_station_address">%1$s&#032;%2$s,&#032;%3$s</string>

    <string name="button_login_label">Login</string>
    <string name="button_registration_label">Registration</string>

    <string name="base_url">https://tcps.ddns.net:33333</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="permission_denied_message">The app can not display any stations without access to device location!</string>
    <string name="permission_denied_ok">OK</string>
    <string name="permission_denied_close_app">CLOSE APP</string>
    <string name="title_activity_maps">Petrol Stations Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDwKGwZZQdhb3_pzexvUyTX4oZy2MGrypg</string>

</resources>
