<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/change_pw_dialog_old_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/change_pw_dialog_old_password_et"
        android:layout_marginBottom="10dp"
        android:text="@string/change_pw_old_password_text"/>

    <EditText
        android:id="@+id/change_pw_dialog_old_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_pw_dialog_old_password_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:padding="8dp"
        android:ems="8"
        android:hint="@string/change_pw_old_password_hint"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/change_pw_dialog_new_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_pw_dialog_old_password_et"
        android:layout_alignStart="@+id/change_pw_dialog_new_password_et"
        android:layout_marginBottom="10dp"
        android:text="@string/change_pw_new_password_text"/>

    <EditText
        android:id="@+id/change_pw_dialog_new_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_pw_dialog_new_password_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="8dp"
        android:ems="8"
        android:hint="@string/change_pw_new_password_hint"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/change_pw_dialog_repeat_new_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_pw_dialog_new_password_et"
        android:layout_alignStart="@+id/change_pw_dialog_repeat_new_password_et"
        android:layout_marginBottom="10dp"
        android:text="@string/change_pw_repeat_new_password_text"/>

    <EditText
        android:id="@+id/change_pw_dialog_repeat_new_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_pw_dialog_repeat_new_password_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:padding="8dp"
        android:ems="8"
        android:hint="@string/change_pw_new_password_hint"
        android:inputType="textPassword"/>

</RelativeLayout>