<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    tools:context="pl.tcps.tcps.activity.LoginActivity">

    <ImageView
        android:id="@+id/reg_logo"
        android:layout_width="162dp"
        android:layout_height="168dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_local_gas_station_black_reg_layout" />

    <!--<EditText-->
        <!--android:id="@+id/et_Registration_label"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_margin="15dp"-->
        <!--android:layout_marginTop="0dp"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/edit_text_login_label"-->
        <!--android:inputType="text" />-->

    <LinearLayout
        android:id="@+id/first_and_last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/reg_logo">

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/edit_text_first_name_label"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/edit_text_last_name_label"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/username_and_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_and_last_name_layout"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/registration_activity_et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edit_text_login_label"
            android:inputType="text" />

        <EditText
            android:id="@+id/registration_activity_et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edit_text_password_label"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:layout_below="@+id/username_and_password_layout">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/edit_text_email_label"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <Button
        android:id="@+id/registration_activity_button_registration"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_below="@+id/email_layout"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/button_registration_label" />

</RelativeLayout>