<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/update_prices_dialog_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="Enter new prices for selected fuels:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/update_prices_dialog_help_text">

        <TextView
            android:id="@+id/update_prices_dialog_pb95_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/update_prices_dialog_pb95_price_value"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/update_prices_dialog_pb95_price_value"
            android:gravity="center_vertical"
            android:text="@string/recycleview_pb95_text_value"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/update_prices_dialog_pb98_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/update_prices_dialog_pb98_price_value"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/update_prices_dialog_pb98_price_value"
            android:gravity="center_vertical"
            android:text="@string/recycleview_pb98_text_value"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/update_prices_dialog_on_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/update_prices_dialog_on_price_value"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/update_prices_dialog_on_price_value"
            android:gravity="center_vertical"
            android:text="@string/recycleview_on_text_value"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/update_prices_dialog_lpg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/update_prices_dialog_lpg_price_value"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/update_prices_dialog_lpg_price_value"
            android:gravity="center_vertical"
            android:text="@string/recycleview_lpg_text_value"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/update_prices_dialog_pb95_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/update_prices_dialog_pb95_text"
            android:ems="4"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/update_prices_dialog_pb98_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_prices_dialog_pb95_price_value"
            android:layout_toEndOf="@+id/update_prices_dialog_pb98_text"
            android:ems="4"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/update_prices_dialog_on_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/update_prices_dialog_pb98_price_value"
            android:layout_below="@+id/update_prices_dialog_pb98_price_value"
            android:ems="4"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/update_prices_dialog_lpg_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/update_prices_dialog_on_price_value"
            android:layout_below="@+id/update_prices_dialog_on_price_value"
            android:ems="4"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textSize="24sp" />

    </RelativeLayout>

</RelativeLayout>